Use short names for NuGet refs in csproj

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -49,9 +49,8 @@
       <HintPath>..\lib-stripped\FNA.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="HookedMethod, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="HookedMethod">
       <HintPath>..\packages\HookedMethod.0.3.1-beta\lib\net45\HookedMethod.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="I18N">
       <HintPath>..\lib\I18N.dll</HintPath>
@@ -71,15 +70,15 @@
     <Reference Include="I18N.West">
       <HintPath>..\lib\I18N.West.dll</HintPath>
     </Reference>
-    <Reference Include="Mono.Cecil, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
+    <Reference Include="Mono.Cecil">
       <HintPath>..\packages\Mono.Cecil.0.10.0-beta7\lib\net35\Mono.Cecil.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Mono.Cecil.Mdb, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
+    <Reference Include="Mono.Cecil.Mdb">
       <HintPath>..\packages\Mono.Cecil.0.10.0-beta7\lib\net35\Mono.Cecil.Mdb.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Mono.Cecil.Pdb, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
+    <Reference Include="Mono.Cecil.Pdb">
       <HintPath>..\packages\Mono.Cecil.0.10.0-beta7\lib\net35\Mono.Cecil.Pdb.dll</HintPath>
       <Private>True</Private>
     </Reference>
@@ -91,7 +90,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+    <Reference Include="System.ValueTuple">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
       <Private>False</Private>
     </Reference>
