--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Mod\Helpers\Commands.cs" />
     <Compile Include="Mod\Everest\Everest.Update.cs" />
     <Compile Include="Mod\Helpers\FakeAssembly.cs" />
+    <Compile Include="Mod\Helpers\RelinkerSymbolReaderProvider.cs" />
     <Compile Include="Mod\Module\EverestModuleBinarySaveData.cs" />
     <Compile Include="Mod\Module\EverestModuleSaveData.cs" />
     <Compile Include="Mod\Module\EverestModuleBinarySettings.cs" />
