Stub FMOD if EVEREST_FMOD_STUB=1 during patching

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Mod\UI\OuiMapList.cs" />
     <Compile Include="Mod\UI\OuiModOptions.cs" />
     <Compile Include="MonoModRules.cs" />
+    <Compile Include="Patches\FMOD\Studio\EventDescription.cs" />
     <Compile Include="Patches\GameplayRenderer.cs" />
     <Compile Include="Patches\CompleteRenderer.cs" />
     <Compile Include="Patches\AreaKey.cs" />
