--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -209,6 +209,8 @@
     <EmbeddedResource Include="Content\Dialog\English.txt">
       <LogicalName>Content\Dialog\English.txt</LogicalName>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Content\Graphics\Atlases\Gui\menu\modoptions.png">
       <LogicalName>Content\Graphics\Atlases\Gui\menu\modoptions.png</LogicalName>
     </EmbeddedResource>
@@ -249,6 +251,47 @@
       <LogicalName>Content\Graphics\Atlases\Gui\notification\default\bg.png</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
+    <ItemGroup>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\menu\modoptions.png">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\menu\modoptions.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\menu\modoptions.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\menu\modoptions.meta.yaml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\menu\maplist.png">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\menu\maplist.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\menu\maplist.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\menu\maplist.meta.yaml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\areas\steam.png">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\areas\steam.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\areas\steam.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\areas\steam.meta.yaml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\areas\steam_back.png">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\areas\steam_back.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\areas\steam_back.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\areas\steam_back.meta.yaml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\areas\null.png">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\areas\null.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\areas\null.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\areas\null.meta.yaml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\areas\null_back.png">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\areas\null_back.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\areas\null_back.meta.yaml">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\areas\null_back.meta.yaml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\GuiLQ\notification\default\bg.png">
+      <LogicalName>Content\Graphics\Atlases\GuiLQ\notification\default\bg.png</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="..\lib-fna\libjpeg-9.dll">
       <Link>libjpeg-9.dll</Link>
@@ -270,8 +313,6 @@
       <Link>YamlDotNet.xml</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
