Support custom FMOD banks with custom events, requires .guids.txt

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Mod\UI\OuiMapList.cs" />
     <Compile Include="Mod\UI\OuiModOptions.cs" />
     <Compile Include="MonoModRules.cs" />
+    <Compile Include="Patches\Audio.cs" />
     <Compile Include="Patches\FMOD\Studio\EventDescription.cs" />
     <Compile Include="Patches\GameplayRenderer.cs" />
     <Compile Include="Patches\CompleteRenderer.cs" />
