--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Mod\UI\OuiMapList.cs" />
     <Compile Include="Mod\UI\OuiModOptions.cs" />
     <Compile Include="MonoModRules.cs" />
+    <Compile Include="Patches\OuiFileNaming.cs" />
     <Compile Include="Patches\Sfxs.cs" />
     <Compile Include="Patches\Audio.cs" />
     <Compile Include="Patches\FMOD\Studio\EventDescription.cs" />
