--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Mod\Entities\CustomMemorial.cs" />
     <Compile Include="Mod\Entities\CustomCoreMessage.cs" />
     <Compile Include="Mod\Entities\LevelFlagTrigger.cs" />
+    <Compile Include="Mod\Everest\Emoji.cs" />
     <Compile Include="Mod\Touch\TouchInputNodes.cs" />
     <Compile Include="Mod\Touch\TouchRegion.cs" />
     <Compile Include="Mod\Touch\TouchInputManager.cs" />
@@ -167,6 +168,9 @@
     <Compile Include="Mod\UI\OuiMapList.cs" />
     <Compile Include="Mod\UI\OuiModOptions.cs" />
     <Compile Include="MonoModRules.cs" />
+    <Compile Include="Patches\FancyText.cs" />
+    <Compile Include="Patches\Monocle\PixelFontSize.cs" />
+    <Compile Include="Patches\Fonts.cs" />
     <Compile Include="Patches\OuiFileNaming.cs" />
     <Compile Include="Patches\Sfxs.cs" />
     <Compile Include="Patches\Audio.cs" />
@@ -225,6 +229,18 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\emoji\thinking.png">
+      <LogicalName>Content\Graphics\Atlases\Gui\emoji\thinking.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\emoji\thinkingbw.m.png">
+      <LogicalName>Content\Graphics\Atlases\Gui\emoji\thinkingbw.m.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\emoji\glad.png">
+      <LogicalName>Content\Graphics\Atlases\Gui\emoji\glad.png</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Content\Graphics\Atlases\Gui\emoji\gladbw.m.png">
+      <LogicalName>Content\Graphics\Atlases\Gui\emoji\gladbw.m.png</LogicalName>
+    </EmbeddedResource>
     <EmbeddedResource Include="Content\Graphics\Atlases\Gui\menu\everest.png">
       <LogicalName>Content\Graphics\Atlases\Gui\menu\everest.png</LogicalName>
     </EmbeddedResource>
