--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Mod\UI\OuiMapList.cs" />
     <Compile Include="Mod\UI\OuiModOptions.cs" />
     <Compile Include="MonoModRules.cs" />
+    <Compile Include="Patches\Decal.cs" />
     <Compile Include="Patches\FancyText.cs" />
     <Compile Include="Patches\Monocle\PixelFontSize.cs" />
     <Compile Include="Patches\Fonts.cs" />
