Start adding fills for old versions of Celeste

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -113,6 +113,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Patches\Compat\SettingsCompat.cs" />
     <Compile Include="Mod\Core\CoreModuleSaveData.cs" />
     <Compile Include="Mod\Core\CoreModuleSettings.cs" />
     <Compile Include="Mod\Entities\CustomMemorialText.cs" />
