First steps towards map list refresh via F5 in chapter select

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -113,6 +113,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mod\UI\OuiHelper_ChapterSelect_Reload.cs" />
     <Compile Include="Patches\Settings.cs" />
     <Compile Include="Mod\Core\CoreModuleSaveData.cs" />
     <Compile Include="Mod\Core\CoreModuleSettings.cs" />
