--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -247,6 +247,9 @@
     <EmbeddedResource Include="Content\Dialog\English.txt">
       <LogicalName>Content\Dialog\English.txt</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="Content\Dialog\French.txt">
+      <LogicalName>Content\Dialog\French.txt</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Content\Graphics\Atlases\Gui\emoji\thinking.png">
