PICO-8 custom map support for lazy people

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Patches\BadelineOldsite.cs" />
     <Compile Include="Patches\CrumblePlatform.cs" />
     <Compile Include="Patches\EntityData.cs" />
+    <Compile Include="Patches\Pico8\Emulator.cs" />
     <Compile Include="Patches\SinkingPlatform.cs" />
     <Compile Include="Patches\MovingPlatform.cs" />
     <Compile Include="Patches\Cobweb.cs" />
