--- a/Celeste.Mod.mm/packages.config
+++ b/Celeste.Mod.mm/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HookedMethod" version="0.3.3-beta" targetFramework="net452" />
+  <package id="Jdenticon-net" version="2.2.1" targetFramework="net452" />
   <package id="Mono.Cecil" version="0.10.0" targetFramework="net35" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
