Pass S3KEY and S3SECRET as Azure postbuild script arguments

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,3 +65,4 @@ steps:
   displayName: 'Run azure-pipelines-postbuild.ps1'
   inputs:
     filePath: 'azure-pipelines-postbuild.ps1'
+    arguments: '-S3Key $(S3KEY) -S3Secret $(S3SECRET)'
