--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
-name: '$(Date:yy.MM.dd)$(Rev:.rr)'
+name: '$(Build.BuildId)+$(Build.BuildIdOffset)@$(Date:yy.MM.dd)$(Rev:.rr)'
 
 steps:
 # Environment setup.
@@ -65,4 +65,4 @@ steps:
   displayName: 'Run azure-pipelines-postbuild.ps1'
   inputs:
     filePath: 'azure-pipelines-postbuild.ps1'
-    arguments: '-S3Key $(S3KEY) -S3Secret $(S3SECRET)'
+    arguments: '$(S3KEY) $(S3SECRET)'
