--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Patches\BadelineOldsite.cs" />
     <Compile Include="Patches\CrumblePlatform.cs" />
     <Compile Include="Patches\EntityData.cs" />
+    <Compile Include="Patches\MountainRenderer.cs" />
     <Compile Include="Patches\Pico8\Emulator.cs" />
     <Compile Include="Patches\IntroCar.cs" />
     <Compile Include="Patches\SinkingPlatform.cs" />
