--- a/Celeste.Mod.mm/packages.config
+++ b/Celeste.Mod.mm/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Jdenticon-net" version="2.2.1" targetFramework="net452" />
   <package id="Mono.Cecil" version="0.10.0" targetFramework="net35" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
 </packages>
